2008-01-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: Fixed various bugs occuring
    when Gtk::Print is not available. Hopefully, those changes could be
    backported for release 1.0-beta5.

2007-11-28 Mathieu Blondel <mblondel@svn.gnome.org>

    * release 1.0-beta5    

2007-11-28 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Rescue the exception raised when the
    gz file is not valid.

2007-11-28 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Include the Gettext module in class<<self
    of Source::Base.

2007-11-28 Mathieu Blondel <mblondel@svn.gnome.org>

    * win32/README: Updated instructions.

2007-11-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/omf/fantasdic/fantasdic-fr.omf: Removed release-specific information.
    * data/omf/fantasdic/fantasdic-C.omf: Ditto.
    * data/gnome/help/fantasdic/README: Updated instructions.

2007-11-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade: Typo (sources =>
    source).

2007-11-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: When editing an existing
    dictionary, the "all databases" button was not selected when needed.

2007-11-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/glade/preferences_dialog.glade: Clearly distinguish
    "enable http proxy" and "enable socks 5 proxy".

2007-11-25 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic.rb: Defines Fantasdic::GPL constant.
    * lib/fantasdic/sources/edict_file.rb: Use it.
    * lib/fantasdic/sources/dict_server.rb: Likewise.
    * lib/fantasdic/sources/google_translate.rb: Likewise.
    * lib/fantasdic/ui/about_dialog.rb: Likewise.

2007-11-22 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/utils.rb (File.which): The load path separator is ";" on
    WIN32, not ":".
