@@ -1,3 +1,11 @@
+2008-08-19 Mathieu Blondel <mblondel@svn.gnome.org>
+
+    * lib/fantasdic/ui/main_app.rb: Use font defined for the selected
+    dictionary in the search entry as well. In the case of Japanese for example,
+    Pango may pick up a Chinese font by mistake and the text in the search entry
+    in turns looks ugly. Setting the font for the search entry fixes this
+    problem.
+
 2008-01-06 Mathieu Blondel <mblondel@svn.gnome.org>
 
     * lib/fantasdic/ui/add_dictionary_dialog.rb: Fixed various bugs occuring
